--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "p02-rocketmovies-api",
+  "name": "p01-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,13 +8,17 @@
     "dev": "nodemon ./src/server.js",
     "migrate": "knex migrate:latest"
   },
-  "keywords": [],
-  "author": "",
+  "author": "nop-dev",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "knex": "^3.1.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.0"
   }
 }
